kcp/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kcp
  labels:
    app.kubernetes.io/part-of: kcp
