kcp/04-kcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: kcp
  namespace: kcp
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium
  hostnames:
    - "kcp.example.com"
  rules:
    - backendRefs:
        - name: kcp-front-proxy
          port: 8443
